<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_search" />
        <item android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history_title" />
        <item android:id="@+id/nav_help"
            android:icon="@drawable/ic_search"
            android:title="@string/help_title" />
    </group>
    <item android:title="@string/nav_library">
        <menu>
            <item android:id="@+id/nav_reindex"
                android:icon="@drawable/ic_refresh"
                android:title="@string/action_reindex" />
            <item android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings_title" />
        </menu>
    </item>
</menu>
